[package]
name = "blinc_input"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Polling-style input state for Blinc sketches and canvases — bridges callback events to is_key_down / mouse_position / etc."
repository = "https://github.com/project-blinc/blinc_input"
readme = "README.md"
rust-version = "1.75"
keywords = ["input", "gamepad", "keyboard", "creative-coding", "blinc"]
categories = ["game-development", "gui"]

# Standalone package — not a member of the Blinc workspace.

[dependencies]
# Pinned `git` deps. Local-dev override is via `[patch]` in the
# consuming workspace's Cargo.toml — see `blinc_gltf/Cargo.toml` for
# the example snippet. Bump in lockstep with the upstream commits.
blinc_core = { git = "https://github.com/project-blinc/Blinc.git", rev = "335f6fc85c5a60a5e3307a74707d83a21861a31b" }
blinc_layout = { git = "https://github.com/project-blinc/Blinc.git", rev = "335f6fc85c5a60a5e3307a74707d83a21861a31b" }
